# CryptonoteEvo-GUI

./: CMakeLists.txt  README.md  ReleaseNotes.md
Windows Installer/: Installer.sln  Installer.vdproj  Installer32.vdproj
src/: contrib.hpp  cryptonote-gui.pro  cryptonotewallet.desktop  cryptonotewallet.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  version.h
src/ISeria/: IMinerWorker.h  IMiningManager.h  IPoolClient.h  IPoolMiner.h
src/IStream/: IMinerWorker.h  IMiningManager.h  IPoolClient.h  IPoolMiner.h
src/JsonRpc/: JsonRpcClient.cpp  JsonRpcClient.h  JsonRpcNotification.cpp  JsonRpcNotification.h  JsonRpcObject.cpp  JsonRpcObject.h  JsonRpcObjectFactory.cpp  JsonRpcObjectFactory.h  JsonRpcRequest.cpp  JsonRpcRequest.h  JsonRpcResponse.cpp  JsonRpcResponse.h
src/Miner/: Miner.cpp  Miner.h  MinerDelegate.cpp  MinerDelegate.h  MinerModel.cpp  MinerModel.h  MiningFrame.cpp  MiningFrame.h  MiningFrame.ui  MiningManager.cpp  MiningManager.h  PoolTreeView.cpp  PoolTreeView.h  StratumClient.cpp  StratumClient.h  Worker.cpp  Worker.h  miningoverviewframe.cpp  miningoverviewframe.h
src/acc/: addressbookdelegate.cpp  addressbookdelegate.h  addressbookdialog.cpp  addressbookdialog.h  addressbookframe.cpp  addressbookframe.h  addressbookmanager.cpp  addressbookmanager.h  addressbookmodel.cpp  addressbookmodel.h  addressbooksortedmodel.cpp  addressbooksortedmodel.h  balanceoverviewframe.cpp  balanceoverviewframe.h  newaddressdialog.cpp  newaddressdialog.h
src/base/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  application.cpp  application.h  askpassworddialog.cpp  askpassworddialog.h  changepassworddialog.cpp  changepassworddialog.h  checkproofdialog.cpp  checkproofdialog.h  common.cpp  common.h  crashdialog.cpp  crashdialog.h  createproofdialog.cpp  createproofdialog.h  importkeydialog.cpp  importkeydialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newaddressdialog.cpp  newaddressdialog.h  okbutton.cpp  okbutton.h  overviewframe.cpp  overviewframe.h  overviewframe.ui  popup.cpp  popup.h  progressbar.cpp  progressbar.h  questiondialog.cpp  questiondialog.h  resizablescrollarea.cpp  resizablescrollarea.h  sendframe.cpp  sendframe.h  settings.cpp  (+9 more)
src/key/: importkeydialog.cpp
src/log/: logframe.cpp  logframe.h  logger.cpp  logger.h
src/net/: connectionoptionsframe.cpp  connectionoptionsframe.h  connectselectiondialog.cpp  connectselectiondialog.h  connectselectiondialog.ui  sendconfirmationdialog.cpp  sendconfirmationdialog.h  sendframe.cpp  sendframe.ui  signalhandler.cpp  signalhandler.h  transferframe.cpp  transferframe.h
src/rpc/: rpcapi.cpp  rpcapi.h
src/wallet/: walletd.cpp  walletd.h  walletdparamsdialog.cpp  walletdparamsdialog.h  walletdparamsdialog.ui  walletmodel.cpp  walletmodel.h
